--- a/workers/theia/index.html
+++ b/workers/theia/index.html
@@ -3,6 +3,6 @@
   <script type="text/javascript" src="/worker/theia/resources/build/demo.js"></script>
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas" width="1080" height="720"></canvas>
 </body>
 </html>
