--- a/workers/theia/index.html
+++ b/workers/theia/index.html
@@ -1,8 +1,20 @@
 <html>
 <head>
   <script type="text/javascript" src="/worker/theia/resources/build/demo.js"></script>
+  <style>
+    body {
+        padding: 0;
+        margin: 0;
+    }
+
+    #canvas {
+        position:absolute;
+        width:100%;
+        height:100%;
+    }
+  </style>
 </head>
 <body>
-  <canvas id="canvas" width="1080" height="720"></canvas>
+  <canvas id="canvas"></canvas>
 </body>
 </html>
