--- a/workers/theia/index.html
+++ b/workers/theia/index.html
@@ -1,17 +1,12 @@
 <html>
 <head>
   <script type="text/javascript" src="/worker/theia/resources/build/demo.js"></script>
+  <script type="text/javascript" src="http://localhost:21000/worker/theia/resources/node_modules/paper/dist/paper-full.min.js"></script>
   <style>
     body {
         padding: 0;
         margin: 0;
         background-color: #1C1F22;
-    }
-
-    #canvas {
-        position:absolute;
-        width:100%;
-        height:100%;
     }
   </style>
 </head>
