--- a/proxy/index.html
+++ b/proxy/index.html
@@ -108,7 +108,7 @@
 <body>
 
   <div id="toolbar">
-    <span class="scenario-name">Scenario #1</span>
+    <span class="scenario-name">Scenario Test</span>
     <button onclick="startSpatial()" class="btn btn-outline-secondary">Start</button>
     <button onclick="killSpatial()" class="btn btn-outline-danger">Kill</button>
     <button onclick="loadTheia()" class="btn btn-outline-secondary">Load visualisation</button>
@@ -116,7 +116,6 @@
   <div id="view">
     <div id="console-frame">
       <div id="console">
-        <br /><br /><br />
       </div>
     </div>
     <div id="theia-frame">
