Added hermes instance id

--- a/proxy/index.html
+++ b/proxy/index.html
@@ -79,7 +79,7 @@
     };
 
     connectConsole = () => {
-        let url = "localhost:3000" //default
+        let url = "localhost:3000"; //default
         if (window.location.pathname) {
             url = window.location.pathname.slice(1);
         }
