Added IFTTT webhook

--- a/proxy/index.html
+++ b/proxy/index.html
@@ -121,6 +121,7 @@
     <button onclick="startSpatial()" class="btn btn-outline-secondary">Start</button>
     <button onclick="killSpatial()" class="btn btn-outline-danger">Kill</button>
     <button onclick="loadTheia()" class="btn btn-outline-secondary">Load visualisation</button>
+    <a href="https://ifttt.com/applets/55532059d-start-simulation-if-incident-occurs" class="btn btn-outline-warning">Open Webhook</a>
   </div>
   <div id="view">
     <div id="console-frame">
