--- a/proxy/index.html
+++ b/proxy/index.html
@@ -93,7 +93,7 @@
         })
 
         socket.on('console dump', data => {
-            $('#console').append(data + "<br /><br />");
+            print(data + "<br /><br />");
         });
     };
 
@@ -105,9 +105,7 @@
         socket.emit('request kill', {})
     };
 
-    print = (message) => {
-        $('#console').append(message);
-    };
+    print = message => $('#console').append(message);
 
     $(document).ready(() => {
         connectConsole();
