--- a/proxy/index.html
+++ b/proxy/index.html
@@ -61,12 +61,14 @@
       width: 100%;
       border: none;
       height: 100%;
+      display: none;
     }
 
     #theia-frame {
       float: right;
       width: 60%;
       height: 100%;
+      background-color: #1C1F22;
     }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300" rel="stylesheet">
@@ -75,6 +77,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <script type="application/javascript">
     loadTheia = () => {
+        document.getElementById('theia').style.display = 'block';
         document.getElementById('theia').src = 'http://localhost:21000/worker/theia'
     };
 
@@ -94,6 +97,10 @@
 
         socket.on('console dump', data => {
             print(data + "<br /><br />");
+
+            if (data.includes("SpatialOS starting")) {
+                loadTheia();
+            }
         });
     };
 
@@ -113,7 +120,6 @@
   </script>
 </head>
 <body>
-
   <div id="toolbar">
     <span class="scenario-name">Scenario Test</span>
     <button onclick="startSpatial()" class="btn btn-outline-secondary">Start</button>
