--- a/workers/theia/index.html
+++ b/workers/theia/index.html
@@ -6,7 +6,7 @@
     body {
         padding: 0;
         margin: 0;
-        background-color: #1C1F22;
+        background-color: #2F3129;
     }
   </style>
 </head>
